--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = lora_board
+default_envs = lora_v3_board
 
 [env]
 platform = espressif32 @ 6.4.0
@@ -33,7 +33,7 @@ check_skip_packages = yes
 test_build_src = yes
 # activate for OTA Update, use the CALLSIGN from is-cfg.json as upload_port:
 #upload_protocol = espota
-#upload_port = <CALLSIGN>.local
+#upload_port = GW0TQM-10.local
 
 [env:lora_board]
 board = esp32doit-devkit-v1
